--- a/App.config
+++ b/App.config
@@ -13,6 +13,9 @@
             <setting name="AutoUpdate" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="LastUpdateTime" serializeAs="String">
+                <value />
+            </setting>
         </ScreenHelper.Properties.Settings>
     </userSettings>
 </configuration>
